# zone.js

./: .travis.yml  BUILD.bazel  WORKSPACE  package.json  rollup.bzl  tsconfig-esm-node.json  tsconfig-esm.json  tsconfig-node.json  tsconfig.json
lib/: BUILD.bazel  rollup.bzl  zone.ts
lib/browser/: browser-legacy.ts
lib/common/: promise.ts
lib/jasmine/: jasmine.ts
test/: wtf_mock.ts
test/browser/: registerElement.spec.ts
