load("@build_bazel_rules_nodejs//:defs.bzl", "rollup_bundle")
load("@npm_bazel_typescript//:defs.bzl", "ts_library")

package(default_visibility = ["//:__pkg__"])

ts_library(
    name = "lib",
    srcs = glob(["**/*.ts"]),
    deps = [
        "@npm//@types",
        "@npm//rxjs",
    ],
    visibility = ["//:__subpackages__"],
)

rollup_bundle(
    name = "wtf",
    entry_point = "lib/zone-spec/wtf",
    deps = [":lib"],
    license_banner = "//:angular_license.txt",
)
